Update Describing Distributions (Core).ipynb

--- a/Describing Distributions (Core).ipynb
+++ b/Describing Distributions (Core).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d3b770d4",
+   "id": "293e5694",
    "metadata": {},
    "source": [
     "# Describing Distributions (Core)"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b45140ef",
+   "id": "e4983ea3",
    "metadata": {},
    "source": [
     "## Assignment: \n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "104da39d",
+   "id": "83e52238",
    "metadata": {},
    "source": [
     "## Tasks: \n",
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5031151f",
+   "id": "06c4b573",
    "metadata": {},
    "source": [
     "## Imports "
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "a465e1ce",
+   "id": "65f458ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "198a55a7",
+   "id": "4dba9f02",
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "67b80dfa",
+   "id": "b716f615",
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f919645",
+   "id": "b4bf9e00",
    "metadata": {},
    "source": [
     "### VitD_levels column"
@@ -350,7 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "748bec64",
+   "id": "393f159d",
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "61f0346f",
+   "id": "de33548a",
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "a2fa3e47",
+   "id": "b9dfc60a",
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2e56185",
+   "id": "7a326b5d",
    "metadata": {},
    "source": [
     "- Is it Discrete or Continuous?\n",
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92b9367e",
+   "id": "c37cece0",
    "metadata": {},
    "source": [
     "### Doc_visits column"
@@ -449,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "97a6b4f6",
+   "id": "8b9fa6ba",
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "0080e166",
+   "id": "887af19b",
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +502,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "25a0c7e0",
+   "id": "9afdd449",
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29f1fd2f",
+   "id": "b48056d7",
    "metadata": {},
    "source": [
     "- Is it Discrete or Continuous?\n",
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "311949e0",
+   "id": "86114b0b",
    "metadata": {},
    "source": [
     "### TotalCharge column"
@@ -544,7 +544,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "2d840b5a",
+   "id": "3f2a3d01",
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "23724bff",
+   "id": "5eea6433",
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "3eb35d96",
+   "id": "8df4e825",
    "metadata": {},
    "outputs": [
     {
@@ -616,9 +616,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3af6a9ef",
+   "metadata": {},
+   "source": [
+    "- Is it Discrete or Continuous?\n",
+    "    - **Continuous**\n",
+    "- Does it have a skew? If so, which direction (+/-)\n",
+    "    - **Positively Skewed**\n",
+    "- What type of kurtosis does it display? (Mesokurtic, Leptokurtic, Platykurtic)\n",
+    "    - **Mesokurtic**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e05d4d40",
+   "id": "0c88468a",
    "metadata": {},
    "outputs": [],
    "source": []
